# weekly-random-reminder

./: .gitignore  README.md  config.example.py  cron  func.py  language.py  pyproject.toml  reminder.py  secrets.example.py
mqtt/: __init__.py
