[tool.poetry]
name = "weekly-random-reminder"
version = "0.1.0"
description = ""
authors = ["DallasO <8305525+DallasO@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
